--- a/src/sass/components/select.scss
+++ b/src/sass/components/select.scss
@@ -7,6 +7,7 @@
     height: 2rem;
     line-height: 2rem;
     padding: 0 2rem 0 .5rem;
+    vertical-align: bottom;
 }
 
 .radon-select-container:hover {
