--- a/src/css/_ionicicon.css
+++ b/src/css/_ionicicon.css
@@ -14,10 +14,10 @@
 
 @font-face {
     font-family: "Ionicons";
-    src: url("../fonts/ionicons.eot?v=2.0.1");
-    src: url("../fonts/ionicons.eot?v=2.0.1#iefix") format("embedded-opentype"), url("../fonts/ionicons.ttf?v=2.0.1") format("truetype"), url("../fonts/ionicons.woff?v=2.0.1") format("woff"), url("../fonts/ionicons.svg?v=2.0.1#Ionicons") format("svg");
+    src: url("fonts/ionicons.eot?v=2.0.1");
+    src: url("fonts/ionicons.eot?v=2.0.1#iefix") format("embedded-opentype"), url("fonts/ionicons.ttf?v=2.0.1") format("truetype"), url("fonts/ionicons.woff?v=2.0.1") format("woff"), url("fonts/ionicons.svg?v=2.0.1#Ionicons") format("svg");
     font-weight: normal;
-    font-style: normal
+    font-style: normal;
 }
 
 .ion,
