--- a/src/css/base/_base.css
+++ b/src/css/base/_base.css
@@ -1,24 +1,127 @@
 @import 'normalize';
 @import 'default';
+@import 'clearfix';
+@import 'layout';
+
+* {
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
+/*HTML & Body reset*/
+html, body {
+    width: 100%;
+    height: 100%;
+}
 
 body {
-    font-family: $font-family;
+  font-family: $font-family;
+  font-size: $font-size-base;
+  line-height: $line-height-base;
+  color: $text-color;
+  background-color: $body-background;
 }
 
-*, *:before, *:after {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    outline: none;
+/*Reset fonts for relevant elements*/
+button,input,select,textarea {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  color: inherit;
 }
 
-ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
+ul,
+ol {
+  list-style: none;
 }
 
-input {
-    line-height: 1;
-    -webkit-appearance:none;
+/*Remove the clear button of a text input control in IE10+*/
+input::-ms-clear, input::-ms-reveal {
+  display: none;
+}
+
+::selection {
+  background: $primary-color;
+  color: #fff;
+}
+
+/* Links*/
+a {
+  color: $link-color;
+  background: transparent;
+  text-decoration: none;
+  outline: none;
+  cursor: pointer;
+  transition: color .3s ease;
+
+  &:hover {
+    color: $link-hover-color;
+  }
+
+  &:active {
+    color: $link-active-color;
+  }
+
+  &:active,
+  &:hover {
+    outline: 0;
+    text-decoration: none;
+  }
+
+  &[disabled] {
+    color: #ccc;
+    cursor: not-allowed;
+    pointer-events: none;
+  }
+}
+
+/*Utility classes*/
+.clearfix {
+    @mixin clearfix;
+}
+.pull-left {
+  float: left;
+}
+.pull-right {
+  float: right;
+}
+.hide {
+  display: none !important;
+}
+.show {
+  display: block !important;
+}
+.invisible {
+  visibility: hidden;
+}
+
+.rd-divider {
+  margin: 0 4px;
+  color: #999;
+  display: inline-block;
+  height: 8px;
+  width: 1px;
+  background: #ccc;
+}
+
+code,
+kbd,
+pre,
+samp {
+  font-family: $code-family;
+}
+
+@define-extend motion-common {
+  animation-duration: .2s;
+  animation-fill-mode: both;
+}
+
+@define-extend motion-common-leave {
+  animation-duration: .2s;
+  animation-fill-mode: both;
 }
