--- a/src/css/base/_base.css
+++ b/src/css/base/_base.css
@@ -1,7 +1,6 @@
 @import 'normalize';
 @import 'default';
-@import 'clearfix';
-@import 'layout';
+@import 'clearfix'; 
 
 * {
   box-sizing: border-box;
@@ -37,6 +36,8 @@ button,input,select,textarea {
 
 ul,
 ol {
+    margin: 0;
+    padding: 0;
   list-style: none;
 }
 
