--- a/src/css/base/_default.css
+++ b/src/css/base/_default.css
@@ -1,11 +1,11 @@
-// Color
+/*// Color*/
 $primary-color          : #2db7f5;
 $info-color             : #2db7f5;
 $success-color          : #87d068;
 $error-color            : #f50;
 $warning-color          : #fa0;
 
-// ------ Base & Require ------
+/*// ------ Base & Require ------*/
 $body-background        : #fff;
 
 $font-family            : "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
@@ -17,17 +17,17 @@ $line-height-computed   : floor(($font-size-base * $line-height-base));
 $border-radius-base     : 6px;
 $border-radius-sm       : 4px;
 
-// LINK
+/*// LINK*/
 $link-color             : #2db7f5;
 $link-hover-color       : tint($link-color, 20%);
 $link-active-color      : shade($link-color, 5%);
 $link-hover-decoration  : none;
 
 
-// Disabled cursor for form controls and buttons.
+/*// Disabled cursor for form controls and buttons.*/
 $cursor-disabled        : not-allowed;
 
-// Animation
+/*// Animation*/
 $ease-out            : cubic-bezier(0.215, 0.61, 0.355, 1);
 $ease-in             : cubic-bezier(0.55, 0.055, 0.675, 0.19);
 $ease-in-out         : cubic-bezier(0.645, 0.045, 0.355, 1);
@@ -41,11 +41,11 @@ $ease-out-quint      : cubic-bezier(0.23, 1, 0.32, 1);
 $ease-in-quint       : cubic-bezier(0.755, 0.05, 0.855, 0.06);
 $ease-in-out-quint   : cubic-bezier(0.86, 0, 0.07, 1);
 
-// Border color
+/*// Border color*/
 $border-color-base      : #d9d9d9;        // base border outline a component
 $border-color-split     : #e9e9e9;        // split border inside a component
 
-// Shadow
+/*// Shadow*/
 $shadow-color           : rgba(100, 100, 100, .2);
 //$box-shadow-base        : $shadow-1-down;
 $shadow-1-up            : 0 -1px 6px $shadow-color;
@@ -54,7 +54,7 @@ $shadow-1-left          : -1px 0 6px $shadow-color;
 $shadow-1-right         : 1px 0 6px $shadow-color;
 $shadow-2               : 0 1px 8px $shadow-color;
 
-// Buttons
+/*// Buttons*/
 $btn-font-weight        : 500;
 
 $btn-primary-color      : #fff;
@@ -84,37 +84,37 @@ $btn-circle-size        : 28px;
 $btn-circle-size-lg     : 32px;
 $btn-circle-size-sm     : 22px;
 
-// Media queries breakpoints
-// Extra small screen / phone
+/*// Media queries breakpoints
+// Extra small screen / phone*/
 $screen-xs              : 480px;
 $screen-xs-min          : $screen-xs;
 $screen-xs-max          : ($screen-xs-min - 1);
 
-// Small screen / tablet
+/*// Small screen / tablet*/
 $screen-sm              : 768px;
 $screen-sm-min          : $screen-sm;
 $screen-sm-max          : ($screen-sm-min - 1);
 
-// Medium screen / desktop
+/*// Medium screen / desktop*/
 $screen-md              : 992px;
 $screen-md-min          : $screen-md;
 $screen-md-max          : ($screen-md-min - 1);
 
-// Large screen / wide desktop
+/*// Large screen / wide desktop*/
 $screen-lg              : 1200px;
 $screen-lg-min          : $screen-lg;
 $screen-lg-max          : ($screen-lg-min - 1);
 
-// Layout and Grid system
+/*// Layout and Grid system*/
 $grid-columns           : 24;
 $grid-gutter-width      : 0;
 
-// Container sizes
+/*// Container sizes*/
 $container-sm           : (720px + $grid-gutter-width);
 $container-md           : (940px + $grid-gutter-width);
 $container-lg           : (1140px + $grid-gutter-width);
 
-// z-index list
+/*// z-index list*/
 $zindex-affix           : 10;
 $zindex-modal-mask      : 990;
 $zindex-modal           : 1000;
@@ -125,15 +125,15 @@ $zindex-picker          : 1050;
 $zindex-dropdown        : 1050;
 $zindex-tooltip         : 1060;
 
-// Form
+/*// Form
 // --------------------------------
-// Legend
+// Legend*/
 $legend-color                : #999;
 $legend-border-color         : $border-color-base;
-// Label
+/*// Label*/
 $label-required-color        : #f50;
 $label-color                 : $text-color;
-// Input
+/*// Input*/
 $input-height-base: 28px;
 $input-height-lg: 32px;
 $input-height-sm: 22px;
