--- a/src/css/base/_base.css
+++ b/src/css/base/_base.css
@@ -20,6 +20,7 @@ html, body {
 
 body {
   font-family: $font-family;
+  -webkit-font-smoothing: antialiased;
   line-height: $line-height-base;
   color: $text-color;
   background-color: $body-background;
